src/App.css
.container {
  /* text-align: center; */
  padding: 0 2rem;
}

@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100&display=swap");

*,
*:before,
*:after {
  padding   : 0;
  margin    : 0;
  box-sizing: border-box;
}

img,
btn,
nav,
.header-text {
  user-select: none;
}

btn,
.add-btn,
.todo-checkbox,
.todo-label {
  cursor: pointer;
}

:root {
  --primary-color: rgb(28, 28, 65);
}

body {
  height          : 100%;
  display         : flex;
  justify-content : center;
  background-color: rgb(236, 236, 236);
}

.main {
  min-height      : 100vh;
  max-width       : 500px;
  width           : 100vw;
  background-color: white;
  color           : var(--primary-color);
  font-size       : calc(10px + 2vmin);
}

.row {
  display        : flex;
  flex-direction : column;
  align-items    : center;
  justify-content: center;
}

header {
  /* padding: 3rem 0; */
  /* padding-top: 3.5rem; */
  padding-top: 1.5rem;
}

.header-row {
  display        : flex;
  align-items    : center;
  justify-content: space-between;
}

.header-text {
  font-family: "Catamaran", sans-serif;
}

.header-image img {
  width          : 60px;
  height         : 60px;
  border-radius  : 50%;
  /*border-radius: 36%;*/
  object-fit     : cover;
}

.header-nobold {
  font-family: "Catamaran", sans-serif;
}

.selectModal {
  /* background-color: rgb(9, 253, 159); */
  background-color   : rgb(9, 184, 253);
  padding            : 0 2rem;
  position           : absolute;
  inset              : 0;
  /* width           : 500px; */
  max-width          : 500px;
  height             : 70px;
  margin             : 0 auto;
  display            : flex;
  align-items        : center;
  justify-content    : space-between;
  opacity            : 0;
  /* animation       : fadeIn .3s ease-in; */
  transition         : all .3s ease-in-out;
  box-shadow         : 0 1px 2px 0 rgb(60 64 67 / 30%),
    0 2px 6px 2px rgb(60 64 67 / 15%);
  z-index: 10000;

  /* gap          :1rem;     */
}

.fadeIn {
  opacity: 1;
}

.fadeOut {
  opacity   : 0;
  animation : fadeOut .4s ease;
  visibility: hidden;

}

.selectCount {
  font-size  : 30px;
  margin-top : -6px;
  cursor     : default;
  user-select: none;
}

.allSelectContainer {
  position       : relative;
  /* top         : -54px;
  right          : -300px; */
  transition     : all 1s ease;
  height         : 50px;
  width          : 100%;
  display        : flex;
  justify-content: flex-end;
  align-items    : center;
  /* inset       :0; */
  /* width       : 30%;
  height         : 10px; */
  /* outline     : 2px solid red; */
}

.allSelectContainer>button {
  position        : absolute;
  padding         : 7px 7px;
  color           : rgb(9, 184, 253);
  background-color: transparent;
  border          : 0;
  cursor          : pointer;
}

/* @keyframes fadeOut {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
} */

/* .fadeIn {
  animation: fadeIn .4s ease;

}
*/
/* @keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}  */

.selectModal div :nth-child(1) {}

.header-image,
.edit,
.delete,
.closeSelectBtn {
  cursor: pointer;

}

.edit {
  color: rgb(9, 184, 253);
}

.delete {
  color: rgb(255, 0, 0);
}

.selectModal div {
  display    : flex;
  align-items: center;
  gap        : .7rem;
  font-size  : 24px;
}

.selectModal button {
  /* border       : 2px solid rgb(255, 0, 0); */
  border             : none;
  /* color           :white; */
  /* background-color: rgb(240, 63, 63); */
  background-color   : rgb(252, 252, 252);
  padding            : 12px 11px;
  border-radius      : 15px;
  cursor             : pointer;
  user-select        : none;

}

.disabled {
  opacity       : .4;
  pointer-events: none;
}

#editModal {
  background: unset;
  border    : unset;
  margin    : 0 auto;
}

.editModal {
  outline            : 0;
  margin             : 9rem auto;
  width              : 30ch;
  outline            : 3px solid red;
  /*width            :40vw; */
  border             : 0;
  /* padding         : 1rem; */
  /* position        : absolute;
inset                : 0; */
  animation          : fadeIn .3s ease-in-out;
  /* background-color: white; */
  /* position        : fixed;
  inset              : 0; */
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.editContainer {
  /* background-color: red; */
  height: 40vh;
  width : 40ch;
}

.editModal {
  /* height: 340px; */

  /* display: flex;
  justify-content: center;
  align-items: center; */
}

#editModal::backdrop,
.deleteModal::backdrop {
  background-color: rgba(0, 0, 1, 0.281);

}

ul li {
  list-style: none;
}

.todo {
  display          : flex;
  align-items      : center;
  position         : relative;
  gap              : 0.8rem;
  max-width        : 700px;
  margin-right     : 1rem;
  margin-bottom    : 3rem;
  justify-content  : space-between;
  transition       : all .2s ease-in;
  padding          : 10px;
  padding-bottom   : 0;
  /* padding-bottom: 3px; */
}

.selected {
  background-color   : #009eff;
  /* padding         : 10px 0; */
  /* scale           :.9; */
  border-radius      : 13px;
  padding-bottom     : 10px;
  transition         : all .3s ease-in-out;
}

.todo-label {
  flex-wrap    : wrap;
  max-width    : 85%;
  text-align   : left;
  overflow-wrap: break-word;
}


/* .noUserSelect{
  color:red;
} */

.todo::after {
  content         : "";
  position        : absolute;
  left            : 0;
  right           : 0;
  bottom          : -35%;
  height          : 2px;
  background-color: black;
  opacity         : 0.1;
}

.todo-parent {
  text-align: center;
  height    : 400px;
  overflow-y: auto;
}

.todo-parent {
  display: block;
}

.todo-checkbox {
  display: none;
}

.todo-checkbox-fill {}

.checkbox-active {
  display: block;
}

.todo-parent:hover .todo-checkbox {
  display: block;
  opacity: .5;
}

.btnParent {
  position: absolute;
  top     : 0;
  right   : 6px;
}

.btn {
  font-size       : 1.4rem;
  color           : rgb(0, 0, 0);
  padding         : 0.7rem;
  background-color: transparent;
  border          : none;
}

.btn:focus {
  outline: none;
}

::-webkit-scrollbar {
  width : 10px;
  margin: 0 10rem;

}

@media (max-width: 991px) {
  .todo-checkbox {
    display: block;
    opacity: .5;
  }

  .todo-parent::-webkit-scrollbar {
    visibility: visible;

    /* width: 10px; */

  }

  .todo-parent::-webkit-scrollbar-thumb {
    visibility: visible;
  }
}

.todo-parent:hover::-webkit-scrollbar {
  opacity   : 1;
  visibility: visible;
}

.todo-parent:hover::-webkit-scrollbar-thumb {
  visibility: visible;
  opacity   : 1;
}

*::-webkit-scrollbar {
  opacity: 0;
}

*::-webkit-scrollbar-thumb {
  visibility      : hidden;
  opacity         : 0;
  transition      : visibility 0.3s linear, opacity 0.3s linear;
  background-color: rgba(100, 100, 100, 0.1);
  scrollbar-width : thin;

  border-radius: 6px;
}

*::-webkit-scrollbar-track {
  border-radius  : 10px;
  scrollbar-width: thin;
}

.nav {
  display        : flex;
  gap            : 3em;
  justify-content: center;
  align-items    : center;
  width          : 100%;
  height         : 9vh;
  position       : relative;
  margin-top     : 1.4em;
}

.add-btn-parent {
  position        : absolute;
  right           : 0;
  bottom          : 0;
  background-color: #3399ff;
  border          : None;
  padding         : 1rem;
  cursor          : pointer;
  width           : 70px;
  height          : 70px;
  border-radius   : 50px;
  font-size       : 1rem;
  display         : flex;
  justify-content : center;
  align-items     : center;
  box-shadow      : 0px 3px 10px rgba(0, 0, 0, 0.4);
}

.add-btn {
  position: relative;
}

.input-text {
  border          : 1px solid rgba(0, 0, 0, 0.2);
  background-color: rgb(235, 234, 234);
  border-radius   : 5px;
  padding         : 0.5em;
  width           : 290px;
}

/* tools  */

.tools-parent {
  min-width          : 160px;
  position           : absolute;
  top                : -19px;
  right              : 3px;
  background-color   : white;
  /* background-color: #515151; */
  /* background-color: var(--dark-bg); */
  z-index            : 100;
  gap                : 0.5em;
  border-radius      : 8px;
  box-shadow         : 0px 5px 12px 0px rgb(0 0 1 / 32%);
}

.tools-container {
  display        : flex;
  flex-direction : column;
  justify-content: center;
  position       : relative;
  margin         : 10px 0;
  display        : block;
  overflow       : hidden;
}

.tools-container>div {
  cursor     : pointer;
  user-select: none;
  text-align : left;
}

.edit-parent,
.delete-parent {
  display        : flex;
  justify-content: center;
  align-items    : center;
  padding        : 9px 13px;
  display        : flex;
  justify-content: flex-start;
  align-items    : center;
  gap            : 6px;
}

.edit-parent:hover,
.delete-parent:hover {
  background-color: rgba(219, 17, 17, 0.103);
}

.editInput {
  /* width:34ch; */
  /* min-width: 10%; */
  width           : 100%;
  /* height       : 45vh; */
  border-radius   : 10px;
  /* height       : calc(50% + 20px); */
  padding         : 10px 16px;
  /* padding      :1rem; */
  font-size       : 23px;
  background-color: white;
  /* overflow     : hidden; */
  /* display      : block; */
  /* word-wrap    : break-word;
  word-break      : break-all;
  height          : 80px;
  overflow-wrap   : break-word;
  line-break      : strict;
  white-space     : pre-wrap; */

  outline: none;
}



.nav-icon-parent {
  z-index         : 100;
  text-align      : center;
  display         : flex;
  justify-content : center;
  align-items     : center;
  position        : absolute;
  background-color: transparent;
  width           : 50px;
  height          : 50px;
  border-radius   : 50%;
  right           : -32px;
  top             : -14px;
}

.content .row {
  font-size: 16px;
}

.dropdown {
  position: relative;
}

